UtahLiveDataTest/src/objects/AmendmentRequestBudgetCategory__c.object
<CustomObject>
    <description>[Business] Object used to store all the requests for the Budget category Amendments ,(Need to revisit)</description>
    <fields>
        <fullName>Adjustment2__c</fullName>
        <formula>GrantorAmount__c - CurrentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdjustmentRate__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK(Adjustment__c)),
    NOT(ISBLANK(CurrentAmount__c)),
    CurrentAmount__c != 0
  ),
  TEXT(ROUND(ABS(Adjustment__c/CurrentAmount__c)*100,2)) + &apos;%&apos;,
  &apos;0%&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminCostValueProposed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AdminCostValueProposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminCostValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AdminCostValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmendementApplicationBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used when we have fetch ApplicationBudgetCategory2__c and copy then over to AmendmentRequestBudgetCategory. We will use this filed as reference field from where we have copied the Application budget categories</description>
        <label>AmendementApplicationBudgetCategory</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>AmendmentRequest Budget Categories</relationshipLabel>
        <relationshipName>AmendmentRequestBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmendmentRequest__c</fullName>
        <label>Amendment Request</label>
        <referenceTo>AmendmentRequest__c</referenceTo>
        <relationshipLabel>AmendmentRequest Budget Categories</relationshipLabel>
        <relationshipName>AmendmentRequestBudget_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Budget Category</label>
        <referenceTo>AwardBudgetCategory__c</referenceTo>
        <relationshipLabel>AmendmentRequest Budget Categories</relationshipLabel>
        <relationshipName>AmendmentRequest_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardedAmountDifference__c</fullName>
        <formula>Federal__c - CurrentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Amount Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>AmendmentRequest Budget Categories</relationshipLabel>
        <relationshipName>AmendmentRequestBudget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashMatchExpenditure__c</fullName>
        <label>CashMatchExpenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashMatch__c</fullName>
        <label>Cash Match</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CatName__c</fullName>
        <formula>BudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CatName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangesRequested__c</fullName>
        <label>Changes Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentApprovedBudgetAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CurrentApprovedBudgetAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentBudget__c</fullName>
        <label>Current Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <label>Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Budget Category</label>
        <referenceTo>GrantBudgetCategory__c</referenceTo>
        <relationshipLabel>AmendmentRequest Budget Categories</relationshipLabel>
        <relationshipName>AmendmentRequestBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeAmount__c</fullName>
        <label>GranteeAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeShare__c</fullName>
        <formula>GranteeAmount__c/(GranteeAmount__c + GrantorAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GranteeShare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrantorAmount__c</fullName>
        <label>GrantorAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HideBuildupGrid__c</fullName>
        <formula>CONTAINS(BudgetCategory__r.RowNumber__c, &apos;213&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBuildupGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditButton__c</fullName>
        <formula>AmendmentRequest__r.HideExternalEdit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfNotBuildupBudgetCategory__c</fullName>
        <formula>IF(BudgetCategory__r.RowNumber__c != &apos;570&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfNotBuildupBudgetCategory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewBuildupBtn__c</fullName>
        <description>Logic for Hiding New Buildup Button</description>
        <formula>AmendmentRequest__r.HideExternalEdit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Buildup Button</inlineHelpText>
        <label>Hide New Buildup Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InKindExpenditure__c</fullName>
        <label>InKindExpenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKindMatch__c</fullName>
        <label>InKind Match</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedAdminCost__c</fullName>
        <label>LastGrantorApprovedAdminCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedAdminPlusBudget__c</fullName>
        <formula>LastGrantorApprovedAdminCost__c +  LastGrantorApprovedBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastGrantorApprovedAdminPlusBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The last grantor approved budget (after budget revision)</description>
        <label>LastGrantorApprovedBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastGrantorApprovedTotalCTE__c</fullName>
        <formula>LastGrantorApprovedAdminCost__c +  LastGrantorApprovedBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastGrantorApprovedTotalCTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MatchAmountDifference__c</fullName>
        <formula>(InKindMatch__c + CashMatch__c) - (NewInKindMatch__c + NewCashMatch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Amount Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewAwardAmount__c</fullName>
        <formula>CurrentAmount__c +  Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewCashMatch__c</fullName>
        <label>New Cash Match</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewInKindMatch__c</fullName>
        <label>New In-Kind Match</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PendingPayment__c</fullName>
        <label>Pending Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PercentVarianceAdmin__c</fullName>
        <label>PercentVarianceAdmin</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentVarianceCurrent__c</fullName>
        <defaultValue>Text(0)</defaultValue>
        <label>PercentVarianceCurrent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentVariance__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>PercentVariance</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectBudgetPlusAdminCostProposed__c</fullName>
        <formula>AdminCostValueProposed__c + ProposedBudgetRevision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectBudgetPlusAdminCostProposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectBudgetPlusAdminCost__c</fullName>
        <formula>AdminCostValue__c +  CurrentApprovedBudgetAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectBudgetPlusAdminCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProposedAmount__c</fullName>
        <formula>CurrentAmount__c  +  Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProposedBudgetRevision__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ProposedBudgetRevision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProposedBudget__c</fullName>
        <formula>CurrentBudget__c  +  ChangesRequested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingBudgetFormula__c</fullName>
        <formula>&apos;$&apos; + TEXT(RemainingBudget__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RowNumberFormula__c</fullName>
        <formula>VALUE(BudgetCategory__r.RowNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>Row Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceArea1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project/Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>AmendmentRequest Budget Categories</relationshipLabel>
        <relationshipName>AmendmentRequest_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amendment Service Area</label>
        <referenceTo>AmendmentServiceArea__c</referenceTo>
        <relationshipLabel>AmendmentRequest Budget Categories</relationshipLabel>
        <relationshipName>AmendmentRequestBudget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>Federal__c+CashMatch__c+InKindMatch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT( BudgetCategory__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementPaid__c</fullName>
        <label>YTDReimbursementPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Amendment Request Budget Category</label>
    <nameField>
        <label>AmendmentRequestBudgetCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AmendmentRequest Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AmountLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>ProposedAmount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Adjustment__c</errorDisplayField>
        <errorMessage>The proposed budget cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RemaingBudgetValidation</fullName>
        <active>true</active>
        <errorConditionFormula>Adjustment__c + RemainingBudget__c &lt; 0</errorConditionFormula>
        <errorMessage>You cannot reduce the total by an amount greater than the remaining budget.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submitted_Amendment</fullName>
        <active>true</active>
        <errorConditionFormula>AmendmentRequest__r.IsSubmitted__c</errorConditionFormula>
        <errorMessage>You cannot edit the budget of a submitted amendment request.</errorMessage>
    </validationRules>
</CustomObject>